--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
 PORT=8000
+
+MONGO_URI=mongodb+srv://akashp1002:jBAH9NmoDqZgqZQ3@cluster0.waurndl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
