--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,8 @@
     "multer": "^2.0.2"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "nodemon": "^3.1.10"
   }
 }
