--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "nodemon": "^3.1.10"
   }
 }
